# abseil-r-example

./: .Rbuildignore  .gitignore  404.html  CMakeLists.txt  DESCRIPTION  LICENSE.html  NAMESPACE  README.Rmd  README.md  authors.html  configure  index.html  pkgdown.yml  sitemap.xml
R/: RcppExports.R  abseilExample.R
man/: abseilExample-package.Rd  dummy_string.Rd
reference/: abseilExample-package.html  dummy_string.html  index.html
src/: CMakeLists.txt  RcppExports.cpp  joinString.cc  statusReturn.cc
src/abseil-cpp/absl/algorithm/: algorithm_test.cc
src/abseil-cpp/absl/base/internal/: invoke.h
src/abseil-cpp/absl/container/: inlined_vector.h
src/abseil-cpp/absl/container/internal/: counting_allocator.h  inlined_vector.h  raw_hash_set_test.cc
src/abseil-cpp/absl/functional/internal/: any_invocable.h
src/abseil-cpp/absl/random/internal/: explicit_seed_seq_test.cc  randen_detect.cc  randen_hwaes.cc
src/abseil-cpp/absl/strings/: str_split_test.cc
src/abseil-cpp/absl/strings/internal/: cord_rep_flat.h  utf8_test.cc
src/abseil-cpp/absl/strings/internal/str_format/: bind_test.cc
src/abseil-cpp/absl/types/internal/: optional.h
